--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="shortcut icon" href="https://i.imgur.com/TXUFa54.png" type="image/x-icon">
     <link rel="canonical" href="https://ashevilledowntowngalleries.org">
-    <link rel="amphtml" href="https://sv388sv-amp-cob.pages.dev/">
+    <link rel="amphtml" href="https://amp-7u0.pages.dev/">
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <style amp-boilerplate>
       body {
@@ -443,34 +443,34 @@
       <div class="sap">
         <div class="gacor">
           <div class="slot-gacor-container block1">
-            <a href="https://sv388sv-amp-cob.pages.dev/">
+            <a href="https://amp-7u0.pages.dev/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-home.png" width="20px">
               </button>
             </a>
-            <a href="https://sv388sv-amp-cob.pages.dev/">
+            <a href="https://amp-7u0.pages.dev/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-chat.png" width="20px">
               </button>
             </a>
-            <a href="https://sv388sv-amp-cob.pages.dev/">
+            <a href="https://amp-7u0.pages.dev/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-wa.png" width="20px">
               </button>
             </a>
-            <a href="https://sv388sv-amp-cob.pages.dev/">
+            <a href="https://amp-7u0.pages.dev/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-promo.png" width="20px">
               </button>
             </a>
           </div>
           <div>
-            <a href="https://sv388sv-amp-cob.pages.dev/" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="https://amp-7u0.pages.dev/" target="_blank" rel="noopener noreferrer nofollow">
               <amp-img height="300" width="300" alt="" src="https://i.imgur.com/3TVMF4N.jpeg"></amp-img>
             </a>
           </div>
           <div class="s-a-p">
-            <a href="https://sv388sv-amp-cob.pages.dev/" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="https://amp-7u0.pages.dev/" target="_blank" rel="noopener noreferrer nofollow">
               <button class="btn2">
                 <strong>KLIK DISINI !! LINK GACOR</strong>
                 <div id="container-stars">
