--- a/index.html
+++ b/index.html
@@ -443,29 +443,29 @@
       <div class="sap">
         <div class="gacor">
           <div class="slot-gacor-container block1">
-            <a href="https://amp-7u0.pages.dev/">
+            <a href="https://t.ly/sv388sv/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-home.png" width="20px">
               </button>
             </a>
-            <a href="https://amp-7u0.pages.dev/">
+            <a href="https://t.ly/sv388sv/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-chat.png" width="20px">
               </button>
             </a>
-            <a href="https://amp-7u0.pages.dev/">
+            <a href="https://t.ly/sv388sv/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-wa.png" width="20px">
               </button>
             </a>
-            <a href="https://amp-7u0.pages.dev/">
+            <a href="https://t.ly/sv388sv/">
               <button class="slot-gacor">
                 <img src="https://main-bareng-aku.b-cdn.net/icon-promo.png" width="20px">
               </button>
             </a>
           </div>
           <div>
-            <a href="https://amp-7u0.pages.dev/" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="https://t.ly/sv388sv/" target="_blank" rel="noopener noreferrer nofollow">
               <amp-img height="300" width="300" alt="" src="https://i.imgur.com/3TVMF4N.jpeg"></amp-img>
             </a>
           </div>
@@ -484,7 +484,7 @@
             </a>
             <br>
             <a href="https://t.ly/sv388sv/" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
-            <a href="https://t.ly/sv388sv" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
+            <a href="https://t.ly/sv388sv/" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
           </div>
         </div>
         <span style="text-align: center">SV388SV: Daftar Sekarang dan Akses Link Alternatif SV3888 dengan Mudah</span>
