--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         html {
     max-width: 100%;
     margin: 0 auto;
-    background-image: url("https://i.imgur.com/8vTUmcV.png");
+    background-image: url("https://i.imgur.com/iBGkttt.png");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
